--- a/public/after5default.css
+++ b/public/after5default.css
@@ -1,7 +1,45 @@
+
+/* Verdana */
+@font-face {
+
+    font-family: Verdana;
+    src: url("/fonts/Verdana.ttf");
+}
+
+/* Verdana Italic*/
+@font-face {
+
+    font-family: Verdana Italic;
+    src: url("/fonts/Verdana Italic.ttf");
+}
+
+/* Verdana Bold */
+@font-face {
+
+    font-family: Verdana Bold;
+    src: url("/fonts/Verdana Bold.ttf");
+}
+
+/* Verdana Bold Italic*/
+@font-face {
+
+    font-family: Verdana Bold Italic;
+    src: url("/fonts/Verdana Bold Italic.ttf");
+}
+
+/* Verdana Bold Italic*/
+@font-face {
+
+    font-family: Verdana Bold Italic;
+    src: url("/fonts/Verdana Bold Italic.ttf");
+}
+
 body {
 
     min-width: 900px;
     max-width: 1400px;
+    font-family: Verdana;
+
 }
 
 #header_container {
@@ -18,7 +56,7 @@ body {
 
     float: right;
     color: #8bc53e;
-    font-size: 40px;
+    font-size: 50px;
     padding-right: 15px;
 
 }
@@ -33,9 +71,8 @@ body {
 #navigation_container ul {
 
     list-style: none;
-    padding-top: 5px;
     padding-left: 95px;
-    margin: 0;
+    margin: 0px;
 
 }
 
@@ -43,14 +80,26 @@ body {
 
     float: left;
     position: relative;
-    width: 100px;
-    font-size: 25px;
+    font-size: 19px;
+    font-weight: bold;
 }
 
 #navigation_container a {
 
     display: block;
+    padding: 7px 25px 0 25px;
     color: #ffffff;
+    text-decoration: none;
+}
+
+#navigation_container a:hover {
+
+    display: block;
+    padding: 7px 25px 0 25px;
+    margin: 0px;
+    color: #ffffff;
+    height: 34px;
+    background-color: #8dc73f;
     text-decoration: none;
 }
 
@@ -61,13 +110,58 @@ body {
     text-decoration: none;
 }
 
-.content_container {
+#content_container {
 
-    padding: 10px;
+    padding: 0 50px 0 50px;
+}
+
+#content_container h1 {
+
+    color: #ffffff;
+    width: 85%;
+    height: 40px;
+    margin-top: 0px;
+    font-size: 25px;
+    text-align: right;
+    padding-top: 5px;
+    padding-right: 30px;
+    background-color: #1a3721;
+    border-radius: 0 25px 25px 0;
+    -moz-border-radius: 0 25px 25px 0;
+    -webkit-border-radius: 0 25px 25px 0;
+}
+
+#content_container .ad_space {
+
+    text-align: center;
+    margin-bottom: 10px;
+    background-color: #e6e2e3;
+    height: 100px;
+}
+
+#content_container .search {
+
+    text-align: right;
+    padding-bottom: 10px;
+}
+
+#content_container .content_left {
+
+    float: left;
+    width: 75%;
+}
+
+#content_container .content_right {
+
+    clear: right;
+    float: right;
+    width: 25%;
+    background-color: #e6e2e3;
 }
 
 .footer_container {
 
+    clear: both;
     background-image: url('/footer_bg.png');
     height: 270px;
     border-radius: 0 0 10px 10px;
@@ -76,8 +170,20 @@ body {
 
 }
 
-#dialog_login {
+#content_loader {
 
-    width: 400px;
-    height: 150px;
+    background: #FFFFFF;
+    height: 100%;
+    left: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    vertical-align: middle;
+    width: 100%;
+    z-index: 999;
+}
+
+#content_loader_inner {
+
+    padding: 15px;
 }
