--- a/public/after5default.css
+++ b/public/after5default.css
@@ -115,6 +115,18 @@ body {
     padding: 0 50px 0 50px;
 }
 
+#content_container a, a:visited {
+
+    color: #111111;
+    text-decoration: none;
+}
+
+#content_container a:hover {
+
+    color: #ffffff;
+    background-color: #8dc73f;
+}
+
 #content_container h1 {
 
     color: #ffffff;
