--- a/public/after5default.css
+++ b/public/after5default.css
@@ -177,7 +177,7 @@ body {
     background-color: #e6e2e3;
 }
 
-.footer_container {
+#footer_container {
 
     clear: both;
     background-image: url('/footer_bg.png');
@@ -187,6 +187,45 @@ body {
     -webkit-border-radius: 0 0 10px 10px;
 
 }
+
+#footer_container div {
+
+    float: left;
+    padding-top: 85px;
+    padding-left: 50px;
+    width: 115px;
+    color: #ffffff;
+    font-size: small;
+
+}
+
+#footer_container ul {
+    list-style: none;
+}
+
+#footer_container a {
+
+    display: block;
+    padding: 0px 150px 0px 0px;
+    
+    color: #ffffff;
+    text-decoration: none;
+} 
+
+#footer_container a:hover {
+
+    display: block;
+    padding: 0px 150px 0px 0px;
+
+    color: #ffffff;
+    background-color: #8dc73f;
+} 
+
+#footer_container a:visited {
+
+    color: #ffffff;
+    text-decoration: none;
+} 
 
 #content_loader {
 
