--- a/public/after5default.css
+++ b/public/after5default.css
@@ -36,16 +36,19 @@
 
 body {
 
+    background-color: #ffffff;
     min-width: 900px;
-    max-width: 1400px;
+    max-width: 1080px;
     font-family: Verdana;
 
 }
 
 #header_container {
 
-    background-image: url('/header_bg.png');
-    height: 139px;
+    background-image: url('/HeaderBground.png');
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 100px;
     border-radius: 10px 10px 0 0;
     -moz-border-radius: 10px 10px 0 0;
     -webkit-border-radius: 10px 10px 0 0;
@@ -56,22 +59,24 @@ body {
 
     float: right;
     color: #8bc53e;
-    font-size: 50px;
+    font-size: 35px;
     padding-right: 15px;
 
 }
 
 #navigation_container {
 
-    background-image: url('/navigation_bg.png');
-    height: 41px;
+    background-image: url('/NavigationBground.png');
+    height: 35px;
+    margin-bottom: 15px;
+    font-family: Verdana Bold;
 
 }
 
 #navigation_container ul {
 
     list-style: none;
-    padding-left: 95px;
+    padding-left: 55px;
     margin: 0px;
 
 }
@@ -80,8 +85,7 @@ body {
 
     float: left;
     position: relative;
-    font-size: 19px;
-    font-weight: bold;
+    font-size: 15px;
 }
 
 #navigation_container a {
@@ -98,7 +102,7 @@ body {
     padding: 7px 25px 0 25px;
     margin: 0px;
     color: #ffffff;
-    height: 34px;
+    height: 28px;
     background-color: #8dc73f;
     text-decoration: none;
 }
@@ -117,23 +121,26 @@ body {
 
 #content_container a, a:visited {
 
-    color: #111111;
+    color: inherit;
     text-decoration: none;
 }
-
+/*
 #content_container a:hover {
 
     color: #ffffff;
     background-color: #8dc73f;
-}
+}*/
 
 #content_container h1 {
 
+    background-image: url('/HeadlineSplatter.png');
+    background-repeat: no-repeat;
+    background-position: right;
     color: #ffffff;
     width: 85%;
-    height: 40px;
+    height: 33px;
     margin-top: 0px;
-    font-size: 25px;
+    font-size: 20px;
     text-align: right;
     padding-top: 5px;
     padding-right: 30px;
@@ -143,12 +150,87 @@ body {
     -webkit-border-radius: 0 25px 25px 0;
 }
 
+#content_container h2 {
+
+    width: 85%;
+    border-top: 1px solid #1a3721;
+    background-color: #e6e2e3;
+    color: #1a3721;
+    padding: 10px;
+    font-size: medium;
+}
+
+#content_container h3 {
+
+    color: #1a3721;
+    font-family: Verdana Bold;
+    font-size: larger;
+}
+
+#content_container p {
+    width: 85%;
+}
+
+#content_container hr {
+
+    color: #1a3721;
+    width: 85%;
+    margin: 0px;
+}
+
+#content_container .para_image_left {
+
+    float: left;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    width: 375px; height: auto;
+}
+
+#content_container .para_image_right {
+
+    float: right;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    width: 375px; height: 375px;
+}
+
+#content_container .para_image_left_search {
+
+    float: left;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    width: 75px; height: auto;
+}
+
+#content_container .para_arrow_left {
+
+    background-image: url('/ArrowGraphic.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    margin-left: 10px;
+    font-family: Verdana;
+    vertical-align: middle;
+    font-size: large;
+}
+
+#content_container .read_more_right {
+
+    padding-top: 10px;
+    color: #1a3721;
+    text-align: right;
+    font-size: small;
+    margin-right: 100px;
+    font-family: Verdana Bold;
+}
+
 #content_container .ad_space {
 
     text-align: center;
     margin-bottom: 10px;
     background-color: #e6e2e3;
     height: 100px;
+    padding: 5px;
 }
 
 #content_container .search {
@@ -160,7 +242,7 @@ body {
 #content_container .content_left {
 
     float: left;
-    width: 75%;
+    width: 70%;
 }
 
 #content_container .content_left span {
@@ -173,64 +255,14 @@ body {
 
     clear: right;
     float: right;
-    width: 25%;
+    width: 30%;
     background-color: #e6e2e3;
 }
-
-#footer_container {
-
-    clear: both;
-    background-image: url('/footer_bg.png');
-    height: 270px;
-    border-radius: 0 0 10px 10px;
-    -moz-border-radius: 0 0 10px 10px;
-    -webkit-border-radius: 0 0 10px 10px;
-
-}
-
-#footer_container div {
-
-    float: left;
-    padding-top: 85px;
-    padding-left: 50px;
-    width: 115px;
-    color: #ffffff;
-    font-size: small;
-
-}
-
-#footer_container ul {
-    list-style: none;
-}
-
-#footer_container a {
-
-    display: block;
-    padding: 0px 150px 0px 0px;
-    
-    color: #ffffff;
-    text-decoration: none;
-} 
-
-#footer_container a:hover {
-
-    display: block;
-    padding: 0px 150px 0px 0px;
-
-    color: #ffffff;
-    background-color: #8dc73f;
-} 
-
-#footer_container a:visited {
-
-    color: #ffffff;
-    text-decoration: none;
-} 
 
 #content_loader {
 
     background: #FFFFFF;
-    height: 100%;
+    height: 10000px; /* I made this really huge on purpose */
     left: 0;
     padding: 0;
     position: absolute;
@@ -243,4 +275,54 @@ body {
 #content_loader_inner {
 
     padding: 15px;
+}
+
+#footer_container {
+
+    clear: both;
+    background-image: url('/FooterBground.png');
+    background-repeat: no-repeat;
+    height: 200px;
+    border-radius: 0 0 10px 10px;
+    -moz-border-radius: 0 0 10px 10px;
+    -webkit-border-radius: 0 0 10px 10px;
+
+}
+
+#footer_container div {
+
+    float: left;
+    padding-top: 50px;
+    padding-left: 50px;
+    width: 100px;
+    color: #ffffff;
+    font-size: small;
+
+}
+
+#footer_container ul {
+    list-style: none;
+}
+
+#footer_container a {
+
+    display: block;
+    padding: 0px 145px 0px 0px;
+
+    color: #ffffff;
+    text-decoration: none;
+}
+
+#footer_container a:hover {
+
+    display: block;
+    padding: 0px 145px 0px 0px;
+    color: #ffffff;
+    background-color: #8dc73f;
+}
+
+#footer_container a:visited {
+
+    color: #ffffff;
+    text-decoration: none;
 }
