--- a/public/after5default.css
+++ b/public/after5default.css
@@ -124,12 +124,6 @@ body {
     color: inherit;
     text-decoration: none;
 }
-/*
-#content_container a:hover {
-
-    color: #ffffff;
-    background-color: #8dc73f;
-}*/
 
 #content_container h1 {
 
@@ -137,10 +131,11 @@ body {
     background-repeat: no-repeat;
     background-position: right;
     color: #ffffff;
-    width: 85%;
+    width: 90%;
     height: 33px;
     margin-top: 0px;
-    font-size: 20px;
+    font-size: larger;
+    font-weight: normal;
     text-align: right;
     padding-top: 5px;
     padding-right: 30px;
@@ -150,25 +145,35 @@ body {
     -webkit-border-radius: 0 25px 25px 0;
 }
 
+.h1_spacer {
+    margin-left: 386px;
+    width: 260px;
+}
+
 #content_container h2 {
 
-    width: 85%;
+    color: #1a3721;
+    font-family: Verdana Bold;
+    font-size: large;
+    font-weight: normal;
+}
+
+#content_container h3 {
+
+    width: 90%;
     border-top: 1px solid #1a3721;
     background-color: #e6e2e3;
     color: #1a3721;
     padding: 10px;
     font-size: medium;
-}
-
-#content_container h3 {
-
-    color: #1a3721;
-    font-family: Verdana Bold;
-    font-size: larger;
+    font-weight: normal;
+    clear: left;
 }
 
 #content_container p {
-    width: 85%;
+    width: 90%;
+    font-weight: normal;
+    font-size: small;
 }
 
 #content_container hr {
@@ -257,6 +262,11 @@ body {
     float: right;
     width: 30%;
     background-color: #e6e2e3;
+}
+
+#content_container .event_calendar {
+    padding: 10px;
+    margin-left: 40px;
 }
 
 #content_loader {
