--- a/public/after5default.css
+++ b/public/after5default.css
@@ -37,16 +37,20 @@
 body {
 
     background-color: #ffffff;
-    min-width: 900px;
-    max-width: 1080px;
+    width: 1080px;
     font-family: Verdana;
-
+    overflow-x: hidden;
+    margin:0px auto;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 5px;
 }
 
 #header_container {
 
     background-image: url('/HeaderBground.png');
     background-repeat: no-repeat;
+    text-align: left;
     cursor: pointer;
     height: 100px;
     border-radius: 10px 10px 0 0;
@@ -67,6 +71,7 @@ body {
 #navigation_container {
 
     background-image: url('/NavigationBground.png');
+    text-align: left;
     height: 35px;
     margin-bottom: 15px;
     font-family: Verdana Bold;
@@ -117,6 +122,7 @@ body {
 #content_container {
 
     padding: 0 50px 0 50px;
+    text-align: left;
 }
 
 #content_container a, a:visited {
@@ -143,9 +149,10 @@ body {
     border-radius: 0 25px 25px 0;
     -moz-border-radius: 0 25px 25px 0;
     -webkit-border-radius: 0 25px 25px 0;
+
 }
 
-.h1_spacer {
+#content_container .h1_spacer {
     margin-left: 386px;
     width: 260px;
 }
@@ -179,7 +186,7 @@ body {
 #content_container hr {
 
     color: #1a3721;
-    width: 85%;
+    width: 92%;
     margin: 0px;
 }
 
@@ -189,6 +196,17 @@ body {
     padding-right: 10px;
     padding-bottom: 10px;
     width: 375px; height: auto;
+}
+
+#content_container .position_container {
+    
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#content_container .position_image_left {
+    
+    float: left; width: 150px; height: 100px; padding: 10px 10px 10px 0;
 }
 
 #content_container .para_image_right {
@@ -205,7 +223,7 @@ body {
     float: left;
     padding-right: 10px;
     padding-bottom: 10px;
-    width: 75px; height: auto;
+    width: 150px; height: 100px;
 }
 
 #content_container .para_arrow_left {
@@ -222,11 +240,18 @@ body {
 #content_container .read_more_right {
 
     padding-top: 10px;
+    padding-bottom: 20px;
     color: #1a3721;
     text-align: right;
     font-size: small;
     margin-right: 100px;
     font-family: Verdana Bold;
+}
+
+#content_container .more_thumbnails_left {
+
+    width: 100px;
+    height: 100px;
 }
 
 #content_container .ad_space {
@@ -239,6 +264,12 @@ body {
 }
 
 #content_container .search {
+
+    text-align: right;
+    padding-bottom: 10px;
+}
+
+#content_container .search_places_right {
 
     text-align: right;
     padding-bottom: 10px;
@@ -269,6 +300,21 @@ body {
     margin-left: 40px;
 }
 
+#content_container .author {
+    
+    font-size: smaller;
+    font-style: italic;
+    padding-bottom: 25px;
+}
+
+#content_container .social_sharing {
+    
+    display: block;
+    text-align: right;
+    margin-right: 50px;
+    padding: 10px;
+}
+
 #content_loader {
 
     background: #FFFFFF;
@@ -280,6 +326,7 @@ body {
     vertical-align: middle;
     width: 100%;
     z-index: 999;
+    text-align: left;
 }
 
 #content_loader_inner {
@@ -335,4 +382,38 @@ body {
 
     color: #ffffff;
     text-decoration: none;
+}
+
+.dojoxFisheyeListItemLabel {
+
+	background-color: #eee;
+	border: 2px solid #666;
+	padding: 2px;
+	text-align: center;
+	position: absolute;
+	display: none;
+	white-space:pre; 
+}
+
+.dojoxFisheyeListItemLabel.dojoxFishSelected {
+	display: block;
+}
+
+.dojoxFisheyeListItemImage {
+	border: 0px;
+	position: absolute;
+}
+
+.dojoxFisheyeListItem {
+	position: absolute;
+	z-index: 2;
+}
+
+.dojoxFisheyeListBar {
+	position: relative;
+}
+	
+.dojoxFisheyeListBar {
+	margin: 0 auto;
+	text-align: center;
 }
