Now all of sub-pages are working, now it's time to have content generate on them.

--- a/public/after5default.css
+++ b/public/after5default.css
@@ -215,7 +215,8 @@ body {
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    width: 375px; height: 375px;
+    width: 300px;
+    height: 300px;
 }
 
 #content_container .para_image_left_search {
