--- a/public/after5default.css
+++ b/public/after5default.css
@@ -130,6 +130,36 @@ body {
     text-decoration: none;
 }
 
+#navigation_container .search_form {
+
+    text-align: right;
+    padding-top: 5px;
+
+}
+
+#navigation_container .search_input_text {
+
+    verticle-align: middle;
+    
+    color: white;
+    border: none;
+    width: 225px;
+    
+    padding: 3px;
+    
+    margin-right: 0px;
+    
+/*    margin-left: 300px;
+*/    
+    
+    font-color: #f2ffda;
+    font-size: 0.75em;
+    font-weight: lighter;
+    
+    background-color: #8bc53e;
+
+}
+
 #content_container {
 
     text-align: left;
@@ -185,12 +215,16 @@ body {
     padding: 10px;
     font-size: medium;
     font-weight: normal;
-    clear: left;
+    clear: both;
+}
+
+#content_container h3 .a {
+    margin-right; 15px;
 }
 
 #content_container h4 {
 
-    color: #1a3721;
+    color: #222;
     font-family: Verdana Bold;
     font-size: small;
     font-weight: normal;
@@ -204,6 +238,7 @@ body {
 
 #content_container hr {
 
+    clear: both;
     color: #1a3721;
     background-color: #1a3721;
     height: 1px;
@@ -212,14 +247,6 @@ body {
     
 }
 
-#content_container .para_image_left {
-
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #1a3721; 
-    width: 375px; height: auto;
-}
 
 #content_container .position_container {
     
@@ -236,6 +263,15 @@ body {
     margin: 10px 10px 10px 0;
     border: 1px solid #1a3721; 
     
+}
+
+#content_container .para_image_left {
+
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #1a3721; 
+    width: 375px; height: auto;
 }
 
 #content_container .para_image_right {
@@ -272,6 +308,36 @@ body {
     font-size: large;
 }
 
+#content_container .about_image_left {
+
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #1a3721; 
+    width: 275px; height: auto;
+}
+
+#content_container .about_image_right {
+
+    float: right;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    width: 175px;
+    height: auto;
+    border: 1px solid #1a3721; 
+
+}
+
+#content_container .press_image_left {
+
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #1a3721; 
+    width: 100px; height: auto;
+}
+
 #content_container .read_more_right {
 
     padding-top: 0px;
@@ -279,7 +345,7 @@ body {
     color: #1a3721;
     text-align: right;
     font-size: small;
-    margin-right: 100px;
+    margin-right: 10px;
     font-family: Verdana Bold;
 }
 
@@ -316,6 +382,7 @@ body {
     margin: 0px 5px 5px 5px;
     border: 1px solid #1a3721; 
 }
+
 #content_container .ad_space {
 
     text-align: center;
@@ -323,14 +390,6 @@ body {
     background-color: #e6e2e3;
     height: 100px;
     padding-top: 10px;
-    border-left: 5px solid white;
-    border-right: 5px solid white;
-}
-
-#content_container .search {
-
-    text-align: right;
-    padding-bottom: 10px;
     border-left: 5px solid white;
     border-right: 5px solid white;
 }
@@ -408,6 +467,18 @@ body {
 #content_loader_inner {
 
     padding: 15px;
+}
+
+#content_container .select {
+    
+    float: right;
+}
+
+#gallery_container {
+    
+    background-color: #e6e2e3;
+    width: 98%;
+    height: 400px;
 }
 
 #footer_container {
