Now using dojox.image.Gallery for /photos.

--- a/public/after5default.css
+++ b/public/after5default.css
@@ -562,9 +562,8 @@ body {
 
 #gallery_container {
     
+    text-align: center;
     background-color: #e6e2e3;
-    width: 98%;
-    height: 400px;
 }
 
 #footer_container {
