--- a/public/after5default.css
+++ b/public/after5default.css
@@ -531,9 +531,9 @@ body {
     
     clear: both;
     display: block;
-    text-align: left; /* Just trying this out. Don't get excited... */
+    text-align: right;
     margin-right: 50px;
-    padding: 10px 0px 10px 0px;
+    padding: 10px;
 }
  
 #content_container .content_thumbnails_right {
