--- a/public/after5default.css
+++ b/public/after5default.css
@@ -496,7 +496,7 @@ body {
    
     font-size: small;
     margin-top: 5px;
-    padding: 5px;
+    padding: 5px 10px 5px 5px;
     background-color: #1a3721;
     text-align: right;
     color: white;
