I've just updated our dojo to 1.6.1. I've also fixed a few issues with /play/people and /play/articles.

--- a/public/after5default.css
+++ b/public/after5default.css
@@ -1093,3 +1093,20 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
 .dojoxCalendar .ok-btn {
 	margin-left: 15px;
 }
+
+
+
+
+
+
+
+/* slide show stuff */
+
+.dojoxImageGallery {
+    
+}
+
+.dojoxImageGallery .slideShowWrapper {
+    
+    width: 800px;
+}
