I've udpated /photos to look more appealing. THIS IS NOT BY DESIGN, and on purpose. The reason being is that I have found a few limitations with dojox.image.Gallery, which is what I use for the gallery. This can be fixed to allow for more control on our side in future release. I can explain during a meeting.

--- a/public/after5default.css
+++ b/public/after5default.css
@@ -723,6 +723,14 @@ body {
     padding: 10px;
     float: right;
 }
+
+#content_container .social_sharing_center {
+    
+    clear: both;
+    display: block;
+    text-align: center;
+    padding: 10px;
+}
  
 #content_container .content_thumbnails_right {
     
@@ -756,8 +764,10 @@ body {
 
 #gallery_container {
     
-    text-align: center;
-    background-color: #e6e2e3;
+/*    text-align: center;
+*/    background-color: #e6e2e3;
+    padding-top: 10px;
+    border: 1px solid #1a3721; 
 }
 
 #footer_container {
@@ -1099,14 +1109,3 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
 
 
 
-
-/* slide show stuff */
-
-.dojoxImageGallery {
-    
-}
-
-.dojoxImageGallery .slideShowWrapper {
-    
-    width: 800px;
-}
