--- a/public/after5default.css
+++ b/public/after5default.css
@@ -537,6 +537,7 @@ body {
 
 #content_container .block_see_more {
    
+    clear: both;
     font-size: small;
     margin-top: 7px;
     padding: 5px 10px 5px 5px;
